--- a/_layout.jade
+++ b/_layout.jade
@@ -1,9 +1,10 @@
 doctype
 html(lang="en")
   head
-    link(rel="stylesheet" href="/main.css")
+    title Harp Bootstrap
+    link(rel="stylesheet" href="main.css")
   body
     != yield
     
-    script(src="jquery-2.1.4.js")
-    script(src="bootstrap.min.js")
+    script(src="js/jquery-2.1.4.js")
+    script(src="js/bootstrap.min.js")
