--- a/_layout.jade
+++ b/_layout.jade
@@ -3,6 +3,7 @@ html(lang="en")
   head
     title Harp Bootstrap
     link(rel="stylesheet" href="main.css")
+    meta(name="viewport", content="width=device-width, initial-scale=1")
   body
     != yield
     
