--- a/_layout.jade
+++ b/_layout.jade
@@ -1,11 +1,15 @@
 doctype
 html(lang="en")
-  head
-    title Harp Bootstrap
-    link(rel="stylesheet" href="main.css")
-    meta(name="viewport", content="width=device-width, initial-scale=1")
-  body
-    != yield
-    
-    script(src="js/jquery-2.1.4.js")
-    script(src="js/bootstrap.min.js")
+	head
+		title Harp Bootstrap
+		link(rel="stylesheet" href="/css/animate.min.css")
+		link(rel="stylesheet" href="main.css")
+		meta(name="viewport", content="width=device-width, initial-scale=1")
+	body
+		!= yield
+
+		script(src="js/jquery-2.1.4.js")
+		script(src="js/bootstrap.min.js")
+		script(src="js/jquery.lettering.js")
+		script(src="js/jquery.textillate.js")
+		script(src="js/wow.min.js")
