--- a/index.jade
+++ b/index.jade
@@ -1,24 +1,8 @@
-nav.navbar.navbar-inverse.navbar-fixed-top(role="navigation")
-	.container
-		.navbar-header
-			button.navbar-toggle(type="button", data-toggle="collapse", data-target="#bs-example-navbar-collapse-1")
-				span.sr-only Toggle navigation
-				span.icon-bar
-				span.icon-bar
-				span.icon-bar
-			a.navbar-brand(href="#") Harp/Bootstrap Starter
-		.collapse.navbar-collapse(id="bs-example-navbar-collapse-1")
-			ul.nav.navbar-nav.navbar-right
-				li
-					a(href="#") About
-				li
-					a(href="#") Services
-				li
-					a(href="#") Contact
+
 
 .container
 	.row
 		.col-lg-12.text-center
 			h1 A Harp.js Bootstrap Starter template
-			p.lead From your friend at #[a(href="http://digitalstrategy.tips", target="_blank") DigitalStrategy.tips].
+			p.lead From your friend at #[a(href="http://PochoLabs.com", target="_blank") PochoLabs.com].
 			p Adapted from the #[a(href="https://getbootstrap.com/examples/starter-template/", target="_blank") Starter Template on Bootstrap], This theme includes all Bootstrap less and jQuery files locally for ultimate offline customization.
